NF: run tests in virtualenv for binary installers
When making installers, create virtualenv, install into virtualenv, run tests.

--- a/master.cfg
+++ b/master.cfg
@@ -211,7 +211,8 @@ def nptest_command(pkg_name,
                    doctests=False,
                    python='python',
                    cd=False,
-                   stdout=False):
+                   stdout=False,
+                   exe=False):
     """ Run tests from new directory """
     pystr = ''
     if cd:
@@ -220,6 +221,8 @@ def nptest_command(pkg_name,
               % (pkg_name, pkg_name, doctests))
     if verbose != None:
         pystr += ', verbose=%d' % verbose
+    if exe:
+        pystr += ', extra_argv=["--exe"]'
     pystr += ").wasSuccessful())"
     return [python, '-c', "%s" % pystr]
 
@@ -351,80 +354,162 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     return f
 
 
-def bdist_factory(git_url,
-                  cmds,
-                  out_dir='dist',
-                  posix=True):
+# The Python32 numpy 1.6.2 installation needs patching according to
+# git diff ad9c2f4~1..ad9c2f4
+# to remove use of __stdout__ and __stderr__ in numpy distutils
+def bdist_wininst_factory(git_url, py_path, out_dir, test_cmd, pre_cmds=()):
+    # Make exe installer, upload, install into virtualenv, test
     factory = BuildFactory()
-    factory.addStep(Git(repourl=git_url, mode='copy', retry=(15, 5)))
-    for cmd in cmds:
-        factory.addStep(ShellCommand(command=shlex.split(cmd, posix=posix)))
+    factory.addStep(Git(
+        repourl=git_url,
+        mode='copy', retry=(15, 5)))
+    for cmd in pre_cmds:
+        factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False)))
+    factory.addStep(ShellCommand(command=shlex.split(
+        py_path + r'\python.exe setup.py bdist --formats=wininst',
+        posix=False)))
     factory.addStep(DirectoryUpload(slavesrc="dist",
-                masterdest="public_html/" + out_dir))
+            masterdest="public_html/" + out_dir))
+    factory.addStep(
+        ShellCommand(command=shlex.split(
+            py_path + r'\Scripts\virtualenv --system-site-packages venv',
+            posix=False),
+            ))
+    factory.addStep(SetProperty(command=
+        shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
+        workdir=r'build\dist',
+        property='distExe'))
+    factory.addStep(
+        ShellCommand(command=
+            [r'Scripts\easy_install.exe', WithProperties('..\\dist\\%(distExe)s')],
+            workdir=r'build\venv',
+            env={'PATH': WithProperties("%(workdir)s\\build\\venv\\Scripts;${PATH}")}
+            ))
+    factory.addStep(
+        ShellCommand(command=
+            [r'Scripts\easy_install.exe', 'nose'],
+            workdir=r'build\venv',
+            env={'PATH': WithProperties("%(workdir)s\\build\\venv\\Scripts;${PATH}")}
+            ))
+    assert isinstance(test_cmd, (list, tuple))
+    factory.addStep(
+        ShellCommand(command=test_cmd,
+            workdir=r'build\venv',
+            env={'PATH': WithProperties("%(workdir)s\\build\\venv\\Scripts;${PATH}"),
+                 'NIPY_DEBUG_PRINT': '1'}
+            ))
     return factory
 
-
 c['builders'] = []
-
-# Add a bdist builder for windows
+nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32',
     slavenames=xp_32_slaves,
-    factory=bdist_factory(
+    factory=bdist_wininst_factory(
         'git://github.com/nipy/nibabel.git',
-        ['python setup.py bdist --formats=wininst'],
-        "dist-32"))
+        r'c:\Python26',
+        "nibabel-dist",
+        nibabel_test_cmd
+))
 )
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist64',
     slavenames=win7_64_slaves,
-    factory=bdist_factory(
+    factory=bdist_wininst_factory(
         'git://github.com/nipy/nibabel.git',
-        ['python setup.py bdist --formats=wininst'],
-        "dist-64"))
+        r'c:\Python26',
+        "nibabel-dist",
+        nibabel_test_cmd
+))
 )
-# The Python32 numpy 1.6.2 installation needs patching according to
-# git diff ad9c2f4~1..ad9c2f4
-# to remove use of __stdout__ and __stderr__ in numpy distutils
+nipy_test_cmd = nptest_command('nipy', doctests=True)
 c['builders'].append(BuilderConfig(
-    name='nipy-bdist32',
+    name='nipy-bdist32-26',
     slavenames=xp_32_slaves,
-    factory=bdist_factory(
+    factory=bdist_wininst_factory(
         'git://github.com/nipy/nipy.git',
-        [r'c:\Python27\python.exe tools\touch_cython_cs.py',
-        r'c:\Python26\python.exe setup.py bdist --formats=wininst',
-        r'c:\Python27\python.exe setup.py bdist --formats=wininst',
-        r'c:\Python32\python.exe setup.py bdist --formats=wininst'],
-        "nipy-dist",
-        posix=False))
-)
+        r'c:\Python26',
+        'nipy-dist',
+        nipy_test_cmd,
+        [r'python tools\touch_cython_cs.py'])))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist32-27',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/nipy.git',
+        r'c:\Python27',
+        'nipy-dist',
+        nipy_test_cmd,
+        [r'python tools\touch_cython_cs.py'])))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist32-32',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/nipy.git',
+        r'c:\Python32',
+        'nipy-dist',
+        nipy_test_cmd,
+        [r'python tools\touch_cython_cs.py'])))
+
 # Add bdist builders for OSX
+def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
+    factory = BuildFactory()
+    factory.addStep(Git(
+        repourl=git_url,
+        mode='copy', retry=(15, 5)))
+    factory.addStep(ShellCommand(command=shlex.split(
+        'python tools/touch_cython_cs.py')))
+    factory.addStep(ShellCommand(command=shlex.split(
+        '%s/bin/%s setup.py bdist_egg' % (py_path, python_cmd))))
+    factory.addStep(
+        ShellCommand(command=shlex.split(
+            py_path + r'/bin/virtualenv --system-site-packages venv')
+            ))
+    factory.addStep(SetProperty(command=
+        shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
+        workdir='build/dist',
+        property='distExe'))
+    factory.addStep(
+        ShellCommand(command=
+            ['./bin/easy_install', WithProperties('../dist/%(distExe)s')],
+            workdir='build/venv'))
+    # Need exe because easy_install makes tests executable on 3.3
+    test_cmd = nptest_command('nipy', doctests=True, exe=True)
+    factory.addStep(
+        ShellCommand(command=test_cmd,
+            workdir=r'build/venv',
+            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+            ))
+    factory.addStep(ShellCommand(command=shlex.split(
+        '%s/bin/%s setup.py bdist_mpkg' % (py_path, python_cmd))))
+    factory.addStep(DirectoryUpload(slavesrc="dist",
+            masterdest="public_html/" + out_dir))
+    return factory
+
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
-    factory=bdist_factory(
+    factory=bdist_egg_factory(
         'git://github.com/nipy/nipy.git',
-        ['/Library/Frameworks/Python.framework/Versions/2.6/bin/python setup.py bdist_mpkg',
-        '/Library/Frameworks/Python.framework/Versions/2.6/bin/python setup.py bdist_egg'],
+        '/Library/Frameworks/Python.framework/Versions/2.6',
         "nipy-dist")
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.7',
     slavenames=['osx-10.6'],
-    factory=bdist_factory(
+    factory=bdist_egg_factory(
         'git://github.com/nipy/nipy.git',
-        ['/Library/Frameworks/Python.framework/Versions/2.7/bin/python setup.py bdist_mpkg',
-        '/Library/Frameworks/Python.framework/Versions/2.7/bin/python setup.py bdist_egg'],
+        '/Library/Frameworks/Python.framework/Versions/2.7',
         "nipy-dist")
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-3.3',
     slavenames=['osx-10.6'],
-    factory=bdist_factory(
+    factory=bdist_egg_factory(
         'git://github.com/nipy/nipy.git',
-        ['/Library/Frameworks/Python.framework/Versions/3.3/bin/python3 setup.py bdist_mpkg',
-        '/Library/Frameworks/Python.framework/Versions/3.3/bin/python3 setup.py bdist_egg'],
-        "nipy-dist")
+        '/Library/Frameworks/Python.framework/Versions/3.3',
+        "nipy-dist",
+        "python3")
 ))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
