--- a/edu.berkeley.bic.jcirl.osx-10.5-intel.plist
+++ b/edu.berkeley.bic.jcirl.osx-10.5-intel.plist
@@ -10,7 +10,7 @@
         <dict>
             <!-- Need local installs on the PATH - for nosetests in particular-->
             <key>PATH</key>
-            <string>/Library/Frameworks/Python.framework/Versions/2.6/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/buildslave/.local/bin</string>
+            <string>/Library/Frameworks/Python.framework/Versions/2.6/bin:/bin:/usr/bin:/usr/sbin:/sbin:/usr/local/bin:/Users/buildslave/.local/bin:/usr/local/git/bin</string>
         </dict>
 
         <!-- Change this to the user you want to run buildbot as -->
