NF: allow doc builders to run doc doctests

--- a/master.cfg
+++ b/master.cfg
@@ -172,7 +172,8 @@ class GithubBot(object):
 
     def doc_factory(self,
                     doc_build_cmd=None,
-                    built_doc_src=None):
+                    built_doc_src=None,
+                    doc_doctest_cmd=None):
         if doc_build_cmd is None:
             doc_build_cmd = self.doc_build_cmd
         if built_doc_src is None:
@@ -180,6 +181,9 @@ class GithubBot(object):
         if None in (doc_build_cmd, built_doc_src):
             raise ValueError("Need defined build command and doc source")
         factory = self._code_build_factory()
+        if not doc_doctest_cmd is None:
+            factory.addStep(ShellCommand(command=doc_doctest_cmd,
+                        env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
         factory.addStep(ShellCommand(command=doc_build_cmd,
                     env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
         factory.addStep(DirectoryUpload(slavesrc=built_doc_src,
@@ -201,8 +205,12 @@ class GithubBot(object):
                 factory=factory))
         return builders
 
-    def build_doc_builders(self, name_slavenames, doc_build_cmd=None, built_doc_src=None):
-        factory = self.doc_factory(doc_build_cmd, built_doc_src)
+    def build_doc_builders(self,
+            name_slavenames,
+            doc_build_cmd=None,
+            built_doc_src=None,
+            doc_doctest_cmd=None):
+        factory = self.doc_factory(doc_build_cmd, built_doc_src, doc_doctest_cmd)
         return self._factory_builders(factory, name_slavenames)
 
 
@@ -513,7 +521,9 @@ c['builders'].append(BuilderConfig(
 ))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
-    (('nipy-doc-builder', linux_64_slaves),))
+    (('nipy-doc-builder', linux_64_slaves),),
+    doc_doctest_cmd = "cd doc && make doctest"
+)
 c['builders'] += nibabel_bot.build_doc_builders(
     (('nibabel-doc-builder', linux_64_slaves),))
 
