BF: force use of distribute for virtualenv
Oops - hit bug annotated here for setuptools:

https://bitbucket.org/tarek/distribute/issue/142/easy_install-will-install-a-package-that-is-already

Use distribute instead of setuptools to get bugfix.

--- a/master.cfg
+++ b/master.cfg
@@ -378,9 +378,11 @@ def bdist_wininst_factory(git_url, py_path, out_dir, test_cmd, pre_cmds=()):
         posix=False)))
     factory.addStep(DirectoryUpload(slavesrc="dist",
             masterdest="public_html/" + out_dir))
+    # Need distribute because of:
+    # https://bitbucket.org/tarek/distribute/issue/142/easy_install-will-install-a-package-that-is-already
     factory.addStep(
         ShellCommand(command=shlex.split(
-            py_path + r'\Scripts\virtualenv --system-site-packages venv',
+            py_path + r'\Scripts\virtualenv --distribute --system-site-packages venv',
             posix=False),
             ))
     factory.addStep(SetProperty(command=
@@ -471,7 +473,7 @@ def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
         '%s/bin/%s setup.py bdist_egg' % (py_path, python_cmd))))
     factory.addStep(
         ShellCommand(command=shlex.split(
-            py_path + r'/bin/virtualenv --system-site-packages venv')
+            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
             ))
     factory.addStep(SetProperty(command=
         shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
