NF: add release checks builder

--- a/master.cfg
+++ b/master.cfg
@@ -410,6 +410,18 @@ def bdist_wininst_factory(git_url, py_path, out_dir, test_cmd, pre_cmds=()):
             ))
     return factory
 
+
+def shell_cmd_factory(git_url, cmds, posix=True):
+    # Run a series of commands over a git repo
+    factory = BuildFactory()
+    factory.addStep(Git(
+        repourl=git_url,
+        mode='copy', retry=(15, 5)))
+    for cmd in cmds:
+        factory.addStep(ShellCommand(command=shlex.split(cmd, posix=posix)))
+    return factory
+
+
 c['builders'] = []
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
@@ -528,6 +540,18 @@ c['builders'] += nipy_bot.build_doc_builders(
 )
 c['builders'] += nibabel_bot.build_doc_builders(
     (('nibabel-doc-builder', linux_64_slaves),))
+# pre-release builders
+c['builders'].append(BuilderConfig(
+    name='nipy-release-checks',
+    slavenames=['osx-10.6'],
+    factory=shell_cmd_factory(
+        'git://github.com/nipy/nipy.git',
+        ('make distclean',
+         'python -m compileall .',
+         'make sdist-tests',
+         'make bdist-egg-tests',
+         'make check-version-info',
+         'make check-files'))))
 
 # Code builders
 c['builders'] += nibabel_bot.build_builders(
