NF: add example builders
Untested, presumably broken

--- a/master.cfg
+++ b/master.cfg
@@ -164,7 +164,7 @@ class GithubBot(object):
 
     def factory(self, test_cmd=None):
         if test_cmd is None:
-            test_cmd = self.test_cmd    
+            test_cmd = self.test_cmd
         factory = self._code_build_factory()
         factory.addStep(ShellCommand(command=test_cmd,
             env={'PYTHONPATH': [WithProperties('%s', 'absBuildDir')]}))
@@ -339,11 +339,7 @@ c['schedulers'] = [
     nibabel_bot.nightly_doc_scheduler(['nibabel-doc-builder'], 2, 20, True),
 ]
 
-####### BUILDERS
-
-# The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
-# what steps, and which slaves can execute them.  Note that any particular build will
-# only take place on one slave.
+# Some factories
 
 def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     f = BuildFactory()
@@ -411,6 +407,41 @@ def bdist_wininst_factory(git_url, py_path, out_dir, test_cmd, pre_cmds=()):
     return factory
 
 
+def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
+    factory = BuildFactory()
+    factory.addStep(Git(
+        repourl=git_url,
+        mode='copy', retry=(15, 5)))
+    factory.addStep(ShellCommand(command=shlex.split(
+        'python tools/touch_cython_cs.py')))
+    factory.addStep(ShellCommand(command=shlex.split(
+        '%s/bin/%s setup.py bdist_egg' % (py_path, python_cmd))))
+    factory.addStep(
+        ShellCommand(command=shlex.split(
+            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
+            ))
+    factory.addStep(SetProperty(command=
+        shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
+        workdir='build/dist',
+        property='distExe'))
+    factory.addStep(
+        ShellCommand(command=
+            ['./bin/easy_install', WithProperties('../dist/%(distExe)s')],
+            workdir='build/venv'))
+    # Need exe because easy_install makes tests executable on 3.3
+    test_cmd = nptest_command('nipy', doctests=True, exe=True)
+    factory.addStep(
+        ShellCommand(command=test_cmd,
+            workdir=r'build/venv',
+            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+            ))
+    factory.addStep(ShellCommand(command=shlex.split(
+        '%s/bin/%s setup.py bdist_mpkg' % (py_path, python_cmd))))
+    factory.addStep(DirectoryUpload(slavesrc="dist",
+            masterdest="public_html/" + out_dir))
+    return factory
+
+
 def shell_cmd_factory(git_url, cmds, posix=True):
     # Run a series of commands over a git repo
     factory = BuildFactory()
@@ -421,6 +452,46 @@ def shell_cmd_factory(git_url, cmds, posix=True):
         factory.addStep(ShellCommand(command=shlex.split(cmd, posix=posix)))
     return factory
 
+
+def example_factory(git_url, py_path, out_dir, python_cmd='python'):
+    factory = BuildFactory()
+    factory.addStep(Git(
+        repourl=git_url,
+        mode='copy', retry=(15, 5)))
+    # Touch c files to make sure build doesn't fail because of c file checkout
+    # times
+    factory.addStep(ShellCommand(command=shlex.split(
+        'python tools/touch_cython_cs.py')))
+    # Make virtualenv into which to install
+    factory.addStep(
+        ShellCommand(command=shlex.split(
+            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
+            ))
+    # Install into virtualenv
+    factory.addStep(
+        ShellCommand(command=[python_cmd, 'setup.py', 'install'],
+            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+            ))
+    # Run examples
+    factory.addStep(
+        ShellCommand(command=[
+            python_cmd,
+            '../nipy/tools/run_log_examples.py',
+            '../nipy/examples',
+            '--log-path=../eg_logs'],
+            workdir=r'build/venv',
+            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+            ))
+    # Upload logs
+    factory.addStep(DirectoryUpload(slavesrc="eg_logs",
+            masterdest="public_html/" + out_dir))
+    return factory
+
+####### BUILDERS
+
+# The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
+# what steps, and which slaves can execute them.  Note that any particular build will
+# only take place on one slave.
 
 c['builders'] = []
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
@@ -474,40 +545,6 @@ c['builders'].append(BuilderConfig(
         [r'python tools\touch_cython_cs.py'])))
 
 # Add bdist builders for OSX
-def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
-    factory = BuildFactory()
-    factory.addStep(Git(
-        repourl=git_url,
-        mode='copy', retry=(15, 5)))
-    factory.addStep(ShellCommand(command=shlex.split(
-        'python tools/touch_cython_cs.py')))
-    factory.addStep(ShellCommand(command=shlex.split(
-        '%s/bin/%s setup.py bdist_egg' % (py_path, python_cmd))))
-    factory.addStep(
-        ShellCommand(command=shlex.split(
-            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
-            ))
-    factory.addStep(SetProperty(command=
-        shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
-        workdir='build/dist',
-        property='distExe'))
-    factory.addStep(
-        ShellCommand(command=
-            ['./bin/easy_install', WithProperties('../dist/%(distExe)s')],
-            workdir='build/venv'))
-    # Need exe because easy_install makes tests executable on 3.3
-    test_cmd = nptest_command('nipy', doctests=True, exe=True)
-    factory.addStep(
-        ShellCommand(command=test_cmd,
-            workdir=r'build/venv',
-            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
-            ))
-    factory.addStep(ShellCommand(command=shlex.split(
-        '%s/bin/%s setup.py bdist_mpkg' % (py_path, python_cmd))))
-    factory.addStep(DirectoryUpload(slavesrc="dist",
-            masterdest="public_html/" + out_dir))
-    return factory
-
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
@@ -552,6 +589,24 @@ c['builders'].append(BuilderConfig(
          'make bdist-egg-tests',
          'make check-version-info',
          'make check-files'))))
+# Example builders
+c['builders'].append(BuilderConfig(
+    name='nipy-examples-2.6',
+    slavenames=['osx-10.6'],
+    factory=bdist_egg_factory(
+        'git://github.com/nipy/nipy.git',
+        '/Library/Frameworks/Python.framework/Versions/2.6',
+        "nipy-examples-2.6")
+))
+c['builders'].append(BuilderConfig(
+    name='nipy-examples-3.3',
+    slavenames=['osx-10.6'],
+    factory=bdist_egg_factory(
+        'git://github.com/nipy/nipy.git',
+        '/Library/Frameworks/Python.framework/Versions/3.3',
+        "nipy-examples-3.3",
+        "python3")
+))
 
 # Code builders
 c['builders'] += nibabel_bot.build_builders(
