BF: cleanup bugs in exampling running

--- a/master.cfg
+++ b/master.cfg
@@ -472,12 +472,15 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
         ShellCommand(command=[python_cmd, 'setup.py', 'install'],
             env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
             ))
+    # Make directory for examples
+    factory.addStep(
+        ShellCommand(command=['mkdir', 'eg_logs']))
     # Run examples
     factory.addStep(
         ShellCommand(command=[
             python_cmd,
-            '../nipy/tools/run_log_examples.py',
-            '../nipy/examples',
+            '../tools/run_log_examples.py',
+            '../examples',
             '--log-path=../eg_logs'],
             workdir=r'build/venv',
             env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
@@ -593,7 +596,7 @@ c['builders'].append(BuilderConfig(
 c['builders'].append(BuilderConfig(
     name='nipy-examples-2.6',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
+    factory=example_factory(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.6',
         "nipy-examples-2.6")
@@ -601,7 +604,7 @@ c['builders'].append(BuilderConfig(
 c['builders'].append(BuilderConfig(
     name='nipy-examples-3.3',
     slavenames=['osx-10.6'],
-    factory=bdist_egg_factory(
+    factory=example_factory(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/3.3',
         "nipy-examples-3.3",
