NF: add nibabel bdist builders, schedule for night

--- a/master.cfg
+++ b/master.cfg
@@ -65,7 +65,7 @@ from buildbot.schedulers import timed
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
 from buildbot.steps.shell import ShellCommand, SetProperty
-from buildbot.steps.transfer import FileDownload, FileUpload, DirectoryUpload
+from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.process.properties import WithProperties
 from buildbot.config import BuilderConfig
 
@@ -138,8 +138,9 @@ class GithubBot(object):
                         treeStableTimer=None,
                         builderNames=buildernames)
 
-    def nightly_doc_scheduler(self, buildernames,
-                              hour = 2, minute = 23, ifchanged=True):
+    def nightly_scheduler(self, buildernames,
+                          hour = 2, minute = 23, ifchanged=True):
+        """ Make a timed scheduler for this repo """
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
         name = "%s-%s-nightly-doc" % (self.organization, self.repo)
@@ -335,8 +336,20 @@ c['schedulers'] = [
                         'nipype-py2.6-osx-10.5-ppc',
                         'nipype-py2.6-osx-10.5-intel',
                        ]),
-    nipy_bot.nightly_doc_scheduler(['nipy-doc-builder'], 2, 01, True),
-    nibabel_bot.nightly_doc_scheduler(['nibabel-doc-builder'], 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-doc-builder'], 2, 01, True),
+    nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 2, 20, True),
+    # Windows 32 nightly builds
+    nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-32'], 2, 30, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-26'], 2, 40, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-32'], 2, 50, True),
+    # Windows 64 nightly builds
+    nibabel_bot.nightly_scheduler(['nibabel-bdist64-26'], 2, 00, True),
+    # OSX nightlies
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.6'], 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.7'], 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 2, 30, True),
 ]
 
 # Some factories
@@ -499,7 +512,7 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
 c['builders'] = []
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
-    name='nibabel-bdist32',
+    name='nibabel-bdist32-26',
     slavenames=xp_32_slaves,
     factory=bdist_wininst_factory(
         'git://github.com/nipy/nibabel.git',
@@ -509,7 +522,17 @@ c['builders'].append(BuilderConfig(
 ))
 )
 c['builders'].append(BuilderConfig(
-    name='nibabel-bdist64',
+    name='nibabel-bdist32-32',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/nibabel.git',
+        r'c:\Python32',
+        "nibabel-dist",
+        nibabel_test_cmd
+))
+)
+c['builders'].append(BuilderConfig(
+    name='nibabel-bdist64-26',
     slavenames=win7_64_slaves,
     factory=bdist_wininst_factory(
         'git://github.com/nipy/nibabel.git',
