BF: fix for unique names for schedulers

--- a/master.cfg
+++ b/master.cfg
@@ -138,12 +138,16 @@ class GithubBot(object):
                         treeStableTimer=None,
                         builderNames=buildernames)
 
-    def nightly_scheduler(self, buildernames,
-                          hour = 2, minute = 23, ifchanged=True):
+    def nightly_scheduler(self,
+                          buildernames,
+                          name_suff,
+                          hour = 2, minute = 23,
+                          ifchanged=True
+                         ):
         """ Make a timed scheduler for this repo """
         if isinstance(buildernames, basestring):
             buildernames = [buildernames]
-        name = "%s-%s-nightly-doc" % (self.organization, self.repo)
+        name = "%s-%s-nightly-%s" % (self.organization, self.repo, name_suff)
         changefilter = ChangeFilter(repository=self.git_url)
         return timed.Nightly(name=name,
                 branch="master",
@@ -336,20 +340,23 @@ c['schedulers'] = [
                         'nipype-py2.6-osx-10.5-ppc',
                         'nipype-py2.6-osx-10.5-intel',
                        ]),
-    nipy_bot.nightly_scheduler(['nipy-doc-builder'], 2, 01, True),
-    nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
+    nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
     # Windows 32 nightly builds
-    nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 2, 10, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-32'], 2, 30, True),
-    nibabel_bot.nightly_scheduler(['nibabel-bdist32-26'], 2, 40, True),
-    nibabel_bot.nightly_scheduler(['nibabel-bdist32-32'], 2, 50, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-32'], 'exe-32', 2, 30, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-26'],
+                                  'exe-26', 2, 40, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-32'],
+                                  'exe-32', 2, 50, True),
     # Windows 64 nightly builds
-    nibabel_bot.nightly_scheduler(['nibabel-bdist64-26'], 2, 00, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist64-26'],
+                                  'exe64-26', 2, 00, True),
     # OSX nightlies
-    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.6'], 2, 10, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.7'], 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.6'], 'egg-26', 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.7'], 'egg-27', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 'egg-33', 2, 30, True),
 ]
 
 # Some factories
