--- a/master.cfg
+++ b/master.cfg
@@ -707,7 +707,8 @@ c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
-     ('dipy-py2.6-xp', xp_32_slaves)))
+     ('dipy-py2.6-xp', xp_32_slaves),
+     ('dipy-py2.6-sparc', sparc_slaves)))
 c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
