Set mime types for served files

--- a/master.cfg
+++ b/master.cfg
@@ -56,6 +56,12 @@ which can react any way it likes, including sending further BuildSets.
 
 # This is convenient for splitting sh commands into lists
 import shlex
+
+# Set mime types for server serving non buildbot files
+from twisted.web.static import File
+webdir = File("public_html")
+webdir.contentTypes['.dmg'] = 'application/octet-stream'
+
 # Buildbot objects
 from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
