NF: add dipy release builders

--- a/master.cfg
+++ b/master.cfg
@@ -54,6 +54,8 @@ One type of build Step is a Trigger, which activates a triggerable Scheduler,
 which can react any way it likes, including sending further BuildSets.
 """
 
+from os.path import join as pjoin
+
 # This is convenient for splitting sh commands into lists
 import shlex
 
@@ -363,6 +365,15 @@ c['schedulers'] = [
     nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.6'], 'egg-26', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-2.7'], 'egg-27', 2, 20, True),
     nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 'egg-33', 2, 30, True),
+    # Dipy
+    # Windows 32 nightly builds
+    nipy_bot.nightly_scheduler(['dipy-bdist32-26'], 'dipy-exe-26', 3, 10, True),
+    nipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 20, True),
+    nipy_bot.nightly_scheduler(['dipy-bdist32-32'], 'dipy-exe-32', 3, 30, True),
+    # OSX nightlies
+    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.6'], 'dipy-egg-26', 3, 10, True),
+    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
+    nipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
 ]
 
 # Some factories
@@ -433,19 +444,26 @@ def bdist_wininst_factory(git_url, py_path, out_dir, test_cmd, pre_cmds=()):
     return factory
 
 
-def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
+def bdist_egg_factory(git_url,
+        py_path,
+        out_dir,
+        test_cmd,
+        python_cmd='python',
+        pre_build_cmds=()):
+    py_bin_path = pjoin(py_path, 'bin')
+    env = {'PATH': [py_bin_path, "${PATH}"]}
     factory = BuildFactory()
     factory.addStep(Git(
         repourl=git_url,
         mode='copy', retry=(15, 5)))
+    for cmd in pre_build_cmds:
+        factory.addStep(ShellCommand(cmd, env=env))
     factory.addStep(ShellCommand(command=shlex.split(
-        'python tools/touch_cython_cs.py')))
-    factory.addStep(ShellCommand(command=shlex.split(
-        '%s/bin/%s setup.py bdist_egg' % (py_path, python_cmd))))
+        '%s/%s setup.py bdist_egg' % (py_bin_path, python_cmd)), env=env))
     factory.addStep(
         ShellCommand(command=shlex.split(
-            py_path + r'/bin/virtualenv --distribute --system-site-packages venv')
-            ))
+            py_bin_path + r'/virtualenv --distribute --system-site-packages venv'),
+            env=env))
     factory.addStep(SetProperty(command=
         shlex.split("python -c 'import os, sys; print os.listdir(os.getcwd())[0]; sys.exit(0)'"),
         workdir='build/dist',
@@ -454,15 +472,18 @@ def bdist_egg_factory(git_url, py_path, out_dir, python_cmd='python'):
         ShellCommand(command=
             ['./bin/easy_install', WithProperties('../dist/%(distExe)s')],
             workdir='build/venv'))
-    # Need exe because easy_install makes tests executable on 3.3
-    test_cmd = nptest_command('nipy', doctests=True, exe=True)
+    # Make a venv version of nosetests, just in case we need it
+    factory.addStep(
+        ShellCommand(command=
+            ['./bin/easy_install', 'nose'],
+            workdir='build/venv'))
     factory.addStep(
         ShellCommand(command=test_cmd,
             workdir=r'build/venv',
             env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
             ))
     factory.addStep(ShellCommand(command=shlex.split(
-        '%s/bin/%s setup.py bdist_mpkg' % (py_path, python_cmd))))
+        '%s/%s setup.py bdist_mpkg' % (py_bin_path, python_cmd))))
     factory.addStep(DirectoryUpload(slavesrc="dist",
             masterdest="public_html/" + out_dir))
     return factory
@@ -584,13 +605,16 @@ c['builders'].append(BuilderConfig(
         [r'python tools\touch_cython_cs.py'])))
 
 # Add bdist builders for OSX
+# Need exe because easy_install makes tests executable on 3.3
+nipy_test_cmd = nptest_command('nipy', doctests=True, exe=True)
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
     factory=bdist_egg_factory(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.6',
-        "nipy-dist")
+        "nipy-dist",
+        nipy_test_cmd)
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-2.7',
@@ -598,7 +622,8 @@ c['builders'].append(BuilderConfig(
     factory=bdist_egg_factory(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.7',
-        "nipy-dist")
+        "nipy-dist",
+        nipy_test_cmd)
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist-mpkg-3.3',
@@ -607,7 +632,67 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/nipy.git',
         '/Library/Frameworks/Python.framework/Versions/3.3',
         "nipy-dist",
-        "python3")
+        nipy_test_cmd,
+        python_cmd="python3")
+))
+##############################
+# Dipy builders
+##############################
+dipy_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy')
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist32-26',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/dipy.git',
+        r'c:\Python26',
+        'dipy-dist',
+        dipy_test_cmd)))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist32-27',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/dipy.git',
+        r'c:\Python27',
+        'dipy-dist',
+        dipy_test_cmd)))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist32-32',
+    slavenames=xp_32_slaves,
+    factory=bdist_wininst_factory(
+        'git://github.com/nipy/dipy.git',
+        r'c:\Python32',
+        'dipy-dist',
+        dipy_test_cmd)))
+
+# Add bdist builders for OSX
+dipy_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest --exe dipy')
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist-mpkg-2.6',
+    slavenames=['osx-10.6'],
+    factory=bdist_egg_factory(
+        'git://github.com/nipy/dipy.git',
+        '/Library/Frameworks/Python.framework/Versions/2.6',
+        "dipy-dist",
+        dipy_test_cmd)
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist-mpkg-2.7',
+    slavenames=['osx-10.6'],
+    factory=bdist_egg_factory(
+        'git://github.com/nipy/dipy.git',
+        '/Library/Frameworks/Python.framework/Versions/2.7',
+        "dipy-dist",
+        dipy_test_cmd)
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist-mpkg-3.3',
+    slavenames=['osx-10.6'],
+    factory=bdist_egg_factory(
+        'git://github.com/nipy/dipy.git',
+        '/Library/Frameworks/Python.framework/Versions/3.3',
+        "dipy-dist",
+        dipy_test_cmd,
+        python_cmd="python3")
 ))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
@@ -622,6 +707,17 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=shell_cmd_factory(
         'git://github.com/nipy/nipy.git',
+        ('make distclean',
+         'python -m compileall .',
+         'make sdist-tests',
+         'make bdist-egg-tests',
+         'make check-version-info',
+         'make check-files'))))
+c['builders'].append(BuilderConfig(
+    name='dipy-release-checks',
+    slavenames=['osx-10.6'],
+    factory=shell_cmd_factory(
+        'git://github.com/nipy/dipy.git',
         ('make distclean',
          'python -m compileall .',
          'make sdist-tests',
