Fix test failures from nose bug on buildbots

--- a/master.cfg
+++ b/master.cfg
@@ -638,7 +638,7 @@ c['builders'].append(BuilderConfig(
 ##############################
 # Dipy builders
 ##############################
-dipy_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest dipy')
+win_dipy_test_cmd = ['python',  r'..\tools\dipnost', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-26',
     slavenames=xp_32_slaves,
@@ -646,7 +646,7 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         r'c:\Python26',
         'dipy-dist',
-        dipy_test_cmd)))
+        win_dipy_test_cmd)))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
     slavenames=xp_32_slaves,
@@ -654,7 +654,7 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         r'c:\Python27',
         'dipy-dist',
-        dipy_test_cmd)))
+        win_dipy_test_cmd)))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-32',
     slavenames=xp_32_slaves,
@@ -662,10 +662,12 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         r'c:\Python32',
         'dipy-dist',
-        dipy_test_cmd)))
+        win_dipy_test_cmd)))
 
 # Add bdist builders for OSX
-dipy_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest --exe dipy')
+# Each of the tested _system_ pythons will need:
+# * numpy, scipy, cython, nibabel, virtualenv, bdist_mpkg
+osx_dipy_test_cmd = ['python',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
@@ -673,7 +675,7 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.6',
         "dipy-dist",
-        dipy_test_cmd)
+        osx_dipy_test_cmd)
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.7',
@@ -682,7 +684,7 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         '/Library/Frameworks/Python.framework/Versions/2.7',
         "dipy-dist",
-        dipy_test_cmd)
+        osx_dipy_test_cmd)
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-3.3',
@@ -691,7 +693,7 @@ c['builders'].append(BuilderConfig(
         'git://github.com/nipy/dipy.git',
         '/Library/Frameworks/Python.framework/Versions/3.3',
         "dipy-dist",
-        dipy_test_cmd,
+        ['python3',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy'],
         python_cmd="python3")
 ))
 # Add nightly docs builders
